--- a/templates/index.html
+++ b/templates/index.html
@@ -41,9 +41,9 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-2">
-		</div>
-		<div class="col-md-7">
-            <form action="">
+		</div >
+		<div class="col-md-7 ">
+            <form class ="px-3 mb-2 bg-primary text-dark" action="">
                 
                 <input id="username" type="text" placeholder="Your chess.com username">
                 Month: <input id="month" type="number" min="1" max="12" placeholder="1">
