--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,9 @@
                 <input id="username" type="text" placeholder="Your chess.com username">
                 Month: <input id="month" type="number" min="1" max="12" placeholder="1">
                 Year: <input id="year" type="number" min="2016" max="2021" placeholder="2021">
-                <input class="button button1" type="button" value="Get Games" onclick="api_call()">
+                <input class="button button1" type="button" value="Get Chess.com Games" onclick="api_call()">
+                <input class="button button1" type="button" value="Get Lichess Games" onclick="li_api_call()">
+
             </form>
 			<div id="board" style="width: 70%; height: 70%"></div>
             <button class ="button button1" id="changepos" onclick="changePos()">Change board position</button>
@@ -215,11 +217,29 @@
         
     }
 
+    async function li_load_data(username, month, year) {
+        await fetch('http://localhost:5000/api/lichess/' + username + '/' + year+ '/' + month)
+            .then(response => response.json())
+            .then(data =>
+                document.getElementById('test').innerHTML=JSON.stringify(data));
+
+        after_load_data();
+        
+    }
+
     function api_call() {
         var username = document.getElementById('username').value;
         var month = document.getElementById('month').value;
         var year = document.getElementById('year').value;
         load_data(username, month, year)
+        
+    }
+
+    function li_api_call() {
+        var username = document.getElementById('username').value;
+        var month = document.getElementById('month').value;
+        var year = document.getElementById('year').value;
+        li_load_data(username, month, year)
         
     }
 
