--- a/templates/index.html
+++ b/templates/index.html
@@ -631,8 +631,20 @@
        // board.move('e2-e4')
         for(let i=0;i<moves.length;i++){
 
-
             await sleep(1000);
+            if (moves[i] === 'e1-g1'){
+                board.move(moves[i])
+                i+=1;
+            } else if(moves[i] === 'e1-c1'){
+                board.move(moves[i])
+                i+=1;
+            } else if(moves[i] === 'e8-g8'){
+                board.move(moves[i])
+                i+=1;
+            } else if(moves[i] === 'e8-c8'){
+                board.move(moves[i])
+                i+=1;
+            }
             board.move(moves[i])
 
         }
